binding: Reimplements V8HiddenValue as V8PrivateProperty.

V8HiddenValue is very slow.  This CL implements it again as
V8PrivateProperty so that it will be efficient.  Also makes it clear
which interface and which attribute, etc. is using which private symbol.
Note that "Class#property" is recommended as symbol names by V8.

Following CLs will replace V8HiddenValue with V8PrivateProperty gradually.

BUG=611864

Review-Url: https://codereview.chromium.org/2007463003
Cr-Commit-Position: refs/heads/master@{#396694}

Former-commit-id: 4419cbd172b5d77e0e33b7622666e523d8b20afa